--- a/pag2.html
+++ b/pag2.html
@@ -6,7 +6,7 @@
     </head>
 </html>
 <body style="background-color:purple;">
-    <h1 style="color:cyan">Memes tecnologia &#128514;&#128525;</h1>
+    <h1 style="color:cyan">Memes &#128514;&#128525;</h1>
     <h2 style="color:aliceblue"></h2>
     <img src="bug.jpg" alt="Bug"></>
     <h3 style="color:aliceblue"></h3>
