--- a/index.html
+++ b/index.html
@@ -11,4 +11,10 @@
     <img src="adao e eva.jpg" alt="Adão e Eva"></>
     <h3 style="color:aliceblue"></h3>
     <p><img src="HELLO.jpg" alt="Hello World!"></p>
+    <p><img src="bug.jpg" alt="Bug"></></p>
+    <h3 style="color:aliceblue"></h3>
+    <p><img src="front.jpg" alt="Paraíso!"></p>
+    <img src="estatistica.jpeg" alt="Bug"></>
+    <h3 style="color:aliceblue"></h3>
+    <p><img src="poema.jpg" alt="Paraíso!"></p>
 </body>
